--- a/aula7.html
+++ b/aula7.html
@@ -6,18 +6,20 @@
         <link rel="stylesheet" href="../Aulas/css/aula7.css">
     </head>
     <body>
-        <!-- div é uma tag html isenta de semântica. Em qualquer lugar que for usada estará correta -->
-        <div class="box1">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        <div class="container">
+                <!-- div é uma tag html isenta de semântica. Em qualquer lugar que for usada estará correta -->
+            <div class="box1">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <!-- Um elemento de bloco já tem por padrão do navegador 100% de largura -->
+            <h1>
+                <span>Raw It</span>
+            </h1>
+            <h2>
+                <p>
+                    <a href="">Texto de exemplo</a>
+                </p>
+            </h2>
         </div>
-        <!-- Um elemento de bloco já tem por padrão do navegador 100% de largura -->
-        <h1>
-            <span>Raw It</span>
-        </h1>
-        <h2>
-            <p>
-                <a href="">Texto de exemplo</a>
-            </p>
-        </h2>
     </body>
 </html> 
