--- a/aula8.html
+++ b/aula8.html
@@ -10,6 +10,8 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate dolore molestiae esse provident est vitae alias, neque delectus? Quas labore neque expedita ex. Accusantium quod facilis, incidunt consequuntur excepturi tempore.</p>
         </div>
 
+        <div class="parallax"></div>
+
         <div class="box2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor? Unde temporibus cumque repudiandae praesentium corrupti amet, reiciendis consequatur, culpa, veritatis reprehenderit recusandae quisquam maxime commodi alias totam inventore similique!</p>
         </div>
