--- a/aula9.html
+++ b/aula9.html
@@ -3,8 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Box-Model 2</title>
+        <link rel="stylesheet" href="css/aula9.css">
     </head>
     <body>
-        
+       <div class="box1">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos, recusandae, illum dolorum commodi unde odit, repellendus corporis consequatur impedit necessitatibus explicabo numquam delectus reiciendis consectetur! Totam neque explicabo sed.
+            Voluptatum, voluptatem repudiandae harum aliquid eos praesentium quibusdam dolorem, corporis ratione aliquam, obcaecati qui eaque ipsa sapiente odio. Aliquid tempora vitae dolorum impedit molestiae nihil nobis ipsam ullam adipisci maxime!
+            Qui libero eum quia pariatur deserunt temporibus nobis tenetur dolorum eaque, officiis, optio sint nihil. Molestias, dolorem. Sed tempore officia sunt eligendi cum molestiae nihil dolor possimus rem, architecto ipsa.</p>
+       </div> 
     </body>
 </html>
