--- a/aula9.html
+++ b/aula9.html
@@ -6,6 +6,22 @@
         <link rel="stylesheet" href="css/aula9.css">
     </head>
     <body>
+        <ul>
+            <li>Item 1</li>
+            <li>
+                Item 2
+                <ul>
+                    <li><a href="">Item 2.1</a></li>
+                    <li>Item 2.2</li>
+                </ul>
+            </li>
+            <li>Item 3</li>
+        </ul>
+
+        <p>
+            <input type="text">
+        </p>
+
        <div class="box1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos, recusandae, illum dolorum commodi unde odit, repellendus corporis consequatur impedit necessitatibus explicabo numquam delectus reiciendis consectetur! Totam neque explicabo sed.
             Voluptatum, voluptatem repudiandae harum aliquid eos praesentium quibusdam dolorem, corporis ratione aliquam, obcaecati qui eaque ipsa sapiente odio. Aliquid tempora vitae dolorum impedit molestiae nihil nobis ipsam ullam adipisci maxime!
