--- a/aula9.html
+++ b/aula9.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/aula9.css">
     </head>
     <body>
-        <ul>
+        <ul class="first-level">
             <li>Item 1</li>
             <li>
                 Item 2
