--- a/aula10.html
+++ b/aula10.html
@@ -6,16 +6,33 @@
         <link rel="stylesheet" href="css/aula10.css">
     </head>
     <body>
+        <!-- TOPO -->
         <header>
             <h1>
                 <img src="../Imagens/Logos/logo-codeblue.png" alt="CodeBlue">
                 CodeBlue
             </h1> 
         </header>
+        <!-- CONTEÚDO -->
         <main>
             <section class="banner">
                 <h2>BLOG</h2>
             </section>
-        </main>  
+            <section class="container post">
+                <h4>Família</h4>
+                <h3>Motivos para viajar para Portugal</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate temporibus nulla, adipisci ab nihil fugiat placeat cumque tenetur, quaerat molestiae aspernatur sit molestias, sequi aliquam sunt nesciunt. Aliquam, tempore deserunt.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus inventore in ab voluptates deserunt reiciendis itaque amet consectetur aspernatur, perferendis quo veniam nihil ad accusamus incidunt accusantium temporibus pariatur magnam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, quo accusamus. Est consectetur ex sequi rem, voluptas aspernatur odio mollitia quam et maxime, obcaecati nobis? Debitis tenetur cumque ut quibusdam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga obcaecati, quos magnam repudiandae dignissimos deleniti earum eius quod pariatur tempore dolorum molestiae aspernatur inventore ipsam vel quia. Blanditiis, magnam praesentium.
+                Fugiat voluptatem amet voluptate laboriosam nulla ad, iure ea dolor fugit similique facere omnis consequatur magnam eligendi nostrum et impedit. Corrupti quia doloribus pariatur assumenda magni excepturi officiis nihil minus.</p>
+                <p class="author"><strong>Por: </strong>João da Silva</p>
+            </section>
+        </main>
+        <br><br><br>    
+        <!-- RODAPÉ -->
+        <footer>
+          <p>&copy; Copyright - Todos os direitos reservados - CodeBlue</p>  
+        </footer>
     </body>
 </html>
