--- a/aula11.html
+++ b/aula11.html
@@ -8,16 +8,20 @@
     <body>
         <!-- Tabeless - Nome de uma técnica CSS para estruturação de layout -->
 
+        <!-- Float -->
+        <div class="f-box">
+            <div class="f-box1"></div>
+            <div class="f-box2"></div>
+            <!-- <div class="fix"></div>
+        </div> -->
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
         <!-- Position -->
         <div class="p-box">
             <div class="p-box1"></div>
             <div class="p-box2"></div>
         </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-        <footer>
-            <p class="fone"><strong>FONE: 3312-3456</strong></p>
-        </footer>
-        
+        <p class="fone"><strong>FONE:</strong>  xxxx-xxxx</p>
+    
     </body>
 </html>
