--- a/aula12.html
+++ b/aula12.html
@@ -27,18 +27,25 @@
     <br><br>
       
         <div class="f-box container">
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-            <div class="f-box1"></div>
-            <div class="f-box2"></div>
-        </div> 
+            <div class="f-box1 box1">1</div>
+            <div class="f-box2 box2">2</div>
+            <div class="f-box1 box3">3</div>
+            <div class="f-box2 box4">4</div>
+            <div class="f-box1 box5">5</div>
+            <div class="f-box2 box6">6</div>
+            <div class="f-box1 box7">7</div>
+            <div class="f-box2 box8">8</div>
+            <div class="f-box1 box9">9</div>
+            <div class="f-box2 box10">10</div>
+            <div class="f-box1 box11">11</div>
+            <div class="f-box2 box12">12</div>
+        </div>
+
+    <br><br>
+        
+        <div class="g-box container">
+            <div class="g-box1"></div>
+            <div class="g-box2"></div>
+        </div>
     </body>
 </html>
