--- a/aula15.html
+++ b/aula15.html
@@ -55,7 +55,7 @@
                                 <img src="../Imagens/Fotos/conheça1.png" alt="">
                             </figure>
                             <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#"></a>Descubra</P>
+                            <p><a href="#">Descubra</a></p>
                         </article>
 
                         <article>
@@ -63,7 +63,7 @@
                                 <img src="../Imagens/Fotos/conheça2.png" alt="">
                             </figure>
                             <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#"></a>Descubra</P>
+                            <p><a href="#">Descubra</a></P>
                         </article>
 
                         <article>
@@ -71,9 +71,40 @@
                                 <img src="../Imagens/Fotos/conheça3.png" alt="">
                             </figure>
                             <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#"></a>Descubra</P>
+                            <p><a href="#">Descubra</a></P>
                         </article>
                     </section>
+                </section>
+            </section>
+
+            <!-- Receitas -->
+            <section class="receita1">
+                <section class="container">
+                    <article>
+                        <figure>
+                            <img src="../Imagens/Fotos/receita1.png" alt="mulher pulando">
+                        </figure>
+                        <article>
+                            <h2>Lorem Ipsum is simply dummy text of the</h2>
+
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                            
+                            <p>Lorem Ipsum is simply dummy text of the printing and <strong>typesetting industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                            
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard <strong>dummy text</strong> ever since the 1500s</p>
+
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        </article>
+                    </article>
+                    <h3>Dica</h3>
+                    <article class="dica">
+                        <figure>
+                            <img src="../Imagens/Fotos/receita2.png" alt=" video fake">
+                        </figure>
+                        <article><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <p>#Exemple</p>
+                        </article>
+                    </article>
                 </section>
             </section>
         </main>
