--- a/aula18.html
+++ b/aula18.html
@@ -14,5 +14,6 @@
             - Uma Interação (gatilho).
         -->
         <div class="box"></div>
+        <div class="box2"></div>
     </body>
 </html>
