--- a/aula18.html
+++ b/aula18.html
@@ -7,13 +7,32 @@
         <link rel="stylesheet" href="css/aula18.css">
     </head>
     <body>
+        <div class="cards">
+            <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis omnis aliquam nulla necessitatibus sunt nemo, ducimus assumenda eveniet quisquam consectetur exercitationem, in accusamus eos nam deleniti alias quibusdam praesentium quae.</p>
+            </div>
+            <div class="card">
+            <p>Maxime voluptatem veniam obcaecati blanditiis rerum nostrum amet consectetur tempora adipisci nisi veritatis optio perspiciatis fuga in illo, temporibus accusantium impedit ducimus dolores quis odit saepe eius? Nisi, veritatis unde.</p>
+            </div>
+            <div class="card">
+            <p>Soluta repellat in consectetur dolorum, officia aspernatur. Aut similique nemo corporis commodi aspernatur ipsum ex ut ullam, vitae deleniti consequuntur distinctio esse at, blanditiis dolor dolorum facere, laboriosam excepturi placeat!</p>
+            </div>
+            <div class="card">
+            <p>Magni cumque delectus fugit beatae excepturi architecto culpa accusantium voluptate incidunt et neque nisi cum nobis eius corrupti dolore assumenda maiores id ullam eligendi, debitis ipsa. Labore provident sunt numquam!</p>
+            </div>
+        </div>
+        
+
         <!--
             Uma animação precisa de 3 coisas:
             - Um começo;
             - Um fim;
             - Uma Interação (gatilho).
         -->
-        <div class="box"></div>
-        <div class="box2"></div>
+        <div class="boxes">
+            <div class="box"></div>
+            <div class="box2"></div>
+        </div>
+        
     </body>
 </html>
