--- a/aula19.html
+++ b/aula19.html
@@ -13,11 +13,24 @@
         <nav class="container">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Produtos</a></li>
+                <li>
+                    <a href="#">Produtos</a>
+                    <ul>
+                        <li><a href="#">caneca</a></li>
+                        <li><a href="#">camiseta</a></li>
+                        <li><a href="#">boné</a></li>
+                        <li><a href="#">meia</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Portifólio</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
+        <main>
+            <section class="banner container">
+
+            </section>
+        </main>
     </body>
 </html>
